<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="HardcodedText">

    <item
        android:title="@string/calibrate_ruler"
        android:id="@+id/calibrate_menu"
        android:titleCondensed="@string/calibrate_short"/>


    <item
     android:title="@string/dark_theme"
     android:id="@+id/theme"
     android:titleCondensed="Темная тема" />

    <!---item
        android:title="Поделиться приложением"
        android:id="@+id/share_menu"
        android:icon="@android:drawable/ic_menu_share"
        android:titleCondensed="Поделиться"
        android:iconTint="#757575" /-->

    <item
        android:title="@string/app_info"
        android:id="@+id/info_menu"
        android:icon="@android:drawable/ic_dialog_info"
        android:titleCondensed="@string/info"
        android:iconTint="#757575" />




</menu>