<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <TextView
        android:id="@+id/line1"
        android:gravity="center"
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="160dp"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/ruler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/line2"
        android:gravity="center"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/line1"
        android:text="@string/_2024"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/contact_developer"
        android:layout_marginStart="24dp"
        android:layout_margin="24dp"
        android:focusableInTouchMode="false"
        android:focusable="false"
        android:backgroundTint="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconDrawable="@android:drawable/sym_action_email"
        app:endIconMode="custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2"
        tools:ignore="UnusedAttribute">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:inputType="none"
            android:focusableInTouchMode="true"
            android:focusable="false"
            android:layout_height="wrap_content"
            android:text="@string/at_461300_mail_ru"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>